--- a/Import_Freight_BOI/Import_Freight_BOI/Views/Manage_Freight/Import_Freight.cshtml
+++ b/Import_Freight_BOI/Import_Freight_BOI/Views/Manage_Freight/Import_Freight.cshtml
@@ -114,7 +114,7 @@
         </div>
         <div class="col-md-2">
             @*<button type="button" id="btnInsertHeader" name="btnInsertHeader" class="btn btn-dark" style="margin-top:15px;">Insert header</button>*@
-           <h4 style="color: black; margin-top: 25px; float:right;">[ F1 : INSERT ]</h4>
+            <h4 style="color: black; margin-top: 25px; float:right;">[ F1 : INSERT ]</h4>
         </div>
         <div class="col-md-2">
             <h4 style="color: black; margin-top: 25px;">[ F2 : CLEAR ]</h4>
@@ -122,6 +122,7 @@
 
     </div>
     <hr /><br />
+    Search :  <input type="text" style="border: solid 1px lightgray; margin-bottom: 20px; padding: 5px; " class="searchEdit" id="searchEdit" placeholder="Search" /> <br />
     <div style="overflow-x:auto;">
 
 
@@ -145,16 +146,27 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><input type="text" style="width: 200px;" id="txt_title0" name="txt_title0" class="form-control" /></td>
+                    <td>
+
+                        <select class="form-control" style="width: 200px;" id="txt_title0" name="txt_title0">
+                            <option value="0">-- select title --</option>
+                            @foreach (var item in ViewBag.AccountTitle.Rows)
+                            {
+                                <option value="@item["AccountNo"]">@item["Title"]</option>
+                            }
+                        </select>
+
+
+                    </td>
                     <td><input type="text" style="width: 200px;" id="Txt_terminal0" name="Txt_terminal0" class="form-control" /></td>
                     <td><input type="text" style="width: 200px;" id="Txt_License0" name="Txt_License0" class="form-control" /></td>
-                    <td><input type="text" style="width: 200px;" id="Txt_Freight0" name="Txt_Freight0" class="form-control" /></td>
-                    <td><input type="text" style="width: 200px;" id="Txt_Origin0" name="Txt_Origin0" class="form-control" /></td>
-                    <td><input type="text" style="width: 200px;" id="Txt_Shipping0" name="Txt_Shipping0" class="form-control" /></td>
-                    <td><input type="text" style="width: 200px;" id="Txt_Vat10" name="Txt_Vat10" class="form-control" /></td>
-                    <td><input type="text" style="width: 200px;" id="Txt_BTax30" name="Txt_BTax30" class="form-control" /></td>
-                    <td><input type="text" style="width: 200px;" id="Txt_Btax10" name="Txt_Btax10" class="form-control" /></td>
-                    <td><input type="text" style="width: 200px;" id="Txt_Vat20" name="Txt_Vat20" class="form-control" /></td>
+                    <td><input type="text" style="width: 200px;" value="0" id="Txt_Freight0" name="Txt_Freight0" class="form-control" onchange="ApmountChanged(0)" /></td>
+                    <td><input type="text" style="width: 200px;" value="0" id="Txt_Origin0" name="Txt_Origin0" class="form-control" onchange="ApmountChanged(0)" /></td>
+                    <td><input type="text" style="width: 200px;" value="0" id="Txt_Shipping0" name="Txt_Shipping0" class="form-control" onchange="ApmountChanged(0)" /></td>
+                    <td><input type="text" style="width: 200px;" value="0" id="Txt_Vat10" name="Txt_Vat10" class="form-control" onchange="ApmountChanged(0)" /></td>
+                    <td><input type="text" style="width: 200px;" value="0" id="Txt_BTax30" name="Txt_BTax30" class="form-control" onchange="BaseTaxTreeChanged(0);" /></td>
+                    <td><input type="text" style="width: 200px;" value="0" id="Txt_Btax10" name="Txt_Btax10" class="form-control" onchange="ApmountChanged(0)" /></td>
+                    <td><input type="text" style="width: 200px;" value="0" id="Txt_Vat20" name="Txt_Vat20" class="form-control" onchange="ApmountChanged(0)" /></td>
                     <td><input type="text" style="width: 200px;" id="Txt_Advance0" name="Txt_Advance0" class="form-control" /></td>
                     <td><input type="text" style="width: 200px;" id="Txt_Apamount0" name="Txt_Apamount0" class="form-control" onkeypress="return InsertRowEnter(event)" /></td>
 
@@ -164,22 +176,23 @@
     </div>
     <br />  <br />
     <div style="overflow-x:auto;">
-       <p> AP Amount<input type="text" id="Ap_Amount" name="Ap_Amount" class="form-control" style="width:200px;" disabled/>   <h4 style="color: black; margin-top: 25px;">[ F3 : INSERT DETAIL ]</h4> </p> 
+        <p> AP Amount<input type="number" id="Ap_Amount" name="Ap_Amount" class="form-control" style="width:200px;" disabled />   <h4 style="color: black; margin-top: 25px;">[ F3 : INSERT DETAIL ]</h4> </p>
     </div>
 </div>
-    <br />
+<br />
 
-    @*<div style="max-width:100%; background-color:white; padding:50px;">
+@*<div style="max-width:100%; background-color:white; padding:50px;">
 
-        </div>*@
+    </div>*@
 
-    <script type="text/javascript">
+<script type="text/javascript">
         var lastID = "";
         var noun = 0;
-
         $(document).ready(function () {
 
+            /*table =  $('#Table_dataFeight').DataTable();*/
             ClearContent();
+
             window.addEventListener("scroll", function (event) {
                 left = this.scrollX;
             }, false);
@@ -205,8 +218,14 @@
                     return;
             }
         };
+
+    function ClearContentBody() {
+        var tatbles = document.getElementById("Table_dataFeight");
+        tatbles.clear()
+
+    }
         function ClearContent() {
-          
+            ClearContentBody();
             var date = new Date();
             var day = date.getDate() + "/" + date.getMonth() + "/" + date.getFullYear();
             console.log(day);
@@ -225,8 +244,9 @@
             $("#Ddl_Country").val(0);
 
         }
+
         function InsertData() {
-            
+
             var DN_val = $("#Txt_DN").val(),
                 yearmonth_val = $("#Ddl_date").val(),
                 Forward_val = $("#Ddl_Forwardd").val(),
@@ -276,7 +296,8 @@
                         var status = data.status;
                         if (status == "True") {
                             Swal.fire({
-                                icon: 'success',
+                               
+                                 icon: 'success',
                                 title: 'Insert header success',
                                 text: 'Inserd ID = ' + data.lastID
                             });
@@ -288,7 +309,7 @@
                                 text: 'Please contact to Admin '
                             });
                         }
-                        
+
                     }
                 });
             }
@@ -297,8 +318,8 @@
 
 
         function insertDetail() {
-           
-           
+
+
             var RowData = [];
             for (var i = 0; i < noun + 1; i++) {
                 var ListData = [];
@@ -316,55 +337,145 @@
                 ListData.push($("#Txt_Advance" + i).val());
                 ListData.push($("#Txt_Apamount" + i).val());
                 RowData.push(ListData);
-               
-            }
 
+            }
+            console.log(RowData);
             $.ajax({
                 type: 'POST',
-                data: ListData,
-                url: 'I'
+                traditional: true,
+                data: { RowData: RowData },
+                url: 'Insert_Freight_detail',
+                dataType: 'json',
+                success: function (data) {
+                    if (data.status == "True") {
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'Insert Detail success'
+                        });
 
+                    } else {
+
+
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Insert False',
+                            text: 'Please contact to Admin '
+                        });
+                    }
+                }
             });
 
 
         }
-          
-            
-        
+
+    $("#searchEdit").on('keyup', function () {
+
+
+        var input, filter, table, tr, td, i, txtValue;
+
+        filter = this.value.toUpperCase();
+        table = document.getElementById("Table_dataFeight");
+        tr = table.getElementsByTagName("tr");
+        for (i = 0; i < tr.length; i++) {
+           
+                td = tr[i].getElementsByTagName("td")[0];
+
+               
+                if (td) {
+                    var a = i - 1;
+                    var title = $("#txt_title" + a + " option:selected").text(),
+                    terminal = $("#Txt_terminal" + a).val(),
+                    License = $("#Txt_License" + a).val(),
+                    Freight = $("#Txt_Freight" + a).val(),
+                    Origin = $("#Txt_Origin" + a).val(),
+                    Shipping = $("#Txt_Shipping" + a).val(),
+                    Vat1 = $("#Txt_Vat1" + a).val(),
+                    BTax3 = $("#Txt_BTax3" + a).val(),
+                    Btax1 = $("#Txt_Btax1" + a).val(),
+                    Vat2 = $("#Txt_Vat2" + a).val(),
+                    Advance = $("#Txt_Advance" + a).val(),
+                    Apamount = $("#Txt_Apamount" + a).val();
+                   /* txtValue = value.text();*/
+
+                    if (title.toUpperCase().includes(filter) || terminal.toUpperCase().includes(filter) || License.toUpperCase().includes(filter) || Freight.toUpperCase().includes(filter) ||
+                        Origin.toUpperCase().includes(filter) || Shipping.toUpperCase().includes(filter) || Vat1.toUpperCase().includes(filter) || BTax3.toUpperCase().includes(filter) ||
+                        Btax1.toUpperCase().includes(filter) || Vat2.toUpperCase().includes(filter) || Advance.toUpperCase().includes(filter) || Apamount.toUpperCase().includes(filter)) 
+                    {
+
+                        tr[i].style.display = "";
+                    } else {
+                        
+                        tr[i].style.display = "none";
+                    }
+                }
+           
+        }
+
+    });
+
 
         $("#btnInsertHeader").click(function (e) {
 
 
         });
         function InsertRowEnter(e) {
-           
-            console.log(noun);
-           
+
+
             if (e.keyCode == "13" || e.keyCode == "9") {
                 noun++;
-                var table = document.getElementById("Table_dataFeight");
+                /* var table = document.getElementById("Table_dataFeight");*/
+          
 
                 var content = '<tr>' +
 
-                    '<th><input type="text" style="width: 200px;" id="txt_title' + noun + '" name="txt_title' + noun + '" class="form-control" autofocus="autofocus" /></th>' +
+                    '<td>  <select style="width: 200px;" class="form-control" id="txt_title' + noun + '" name="txt_title' + noun + '">';
+                    @*'<option value="0">-- select title --</option>' +
+
+                    '<option value="">@Html.DropDownListFor(m => m.AccountNo, new SelectList(ViewBag.AccountTitle, "AccountNo", "Title"))</option>';*@
+
+                     content +=  '</select></td>'+
                     '<td><input type="text" style="width: 200px;" id="Txt_terminal' + noun + '" name="Txt_terminal' + noun + '" class="form-control" /></td>' +
                     '<td><input type="text" style="width: 200px;" id="Txt_License' + noun + '" name="Txt_License' + noun + '" class="form-control" /></td>' +
-                    '<td><input type="text" style="width: 200px;" id="Txt_Freight' + noun + '" name="Txt_Freight' + noun + '" class="form-control" /></td>' +
-                    '<td><input type="text" style="width: 200px;" id="Txt_Origin' + noun + '" name="Txt_Origin' + noun + '" class="form-control" /></td>' +
-                    '<td><input type="text" style="width: 200px;" id="Txt_Shipping' + noun + '" name="Txt_Shipping' + noun + '" class="form-control" /></td>' +
-                    '<td><input type="text" style="width: 200px;" id="Txt_Vat1' + noun + '" name="Txt_Vat1' + noun + '" class="form-control" /></td>' +
-                    '<td><input type="text" style="width: 200px;" id="Txt_BTax3' + noun + '" name="Txt_BTax3' + noun + '" class="form-control" /></td>' +
-                    '<td><input type="text" style="width: 200px;" id="Txt_Btax1' + noun + '" name="Txt_Btax1' + noun + '" class="form-control" /></td>' +
-                    ' <td><input type="text" style="width: 200px;" id="Txt_Vat2' + noun + '" name="Txt_Vat2' + noun + '" class="form-control" /></td>' +
+                    '<td><input type="text" value="0" style="width: 200px;" id="Txt_Freight' + noun + '" name="Txt_Freight' + noun + '" class="form-control" onchange="ApmountChanged(' + noun + ')" /></td>' +
+                    '<td><input type="text" value="0" style="width: 200px;" id="Txt_Origin' + noun + '" name="Txt_Origin' + noun + '" class="form-control" onchange="ApmountChanged(' + noun + ')" /></td>' +
+                    '<td><input type="text" value="0" style="width: 200px;" id="Txt_Shipping' + noun + '" name="Txt_Shipping' + noun + '" class="form-control" onchange="ApmountChanged(' + noun + ')" /></td>' +
+                    '<td><input type="text" value="0" style="width: 200px;" id="Txt_Vat1' + noun + '" name="Txt_Vat1' + noun + '" class="form-control" onchange="ApmountChanged(' + noun + ')" /></td>' +
+                    '<td><input type="text" value="0" style="width: 200px;" id="Txt_BTax3' + noun + '" name="Txt_BTax3' + noun + '" onchange="BaseTaxTreeChanged(' + noun + ')" class="form-control" /></td>' +
+                    '<td><input type="text" value="0" style="width: 200px;" id="Txt_Btax1' + noun + '" name="Txt_Btax1' + noun + '" class="form-control" onchange="ApmountChanged(' + noun +')" /></td>' +
+                    '<td><input type="text" value="0" style="width: 200px;" id="Txt_Vat2' + noun + '" name="Txt_Vat2' + noun + '" class="form-control" onchange="ApmountChanged(' + noun +')" /></td>' +
                     '<td><input type="text" style="width: 200px;" id="Txt_Advance' + noun + '" name="Txt_Advance' + noun + '" class="form-control" /></td>' +
                     '<td><input type="text" style="width: 200px;" id="Txt_Apamount' + noun + '" name="Txt_Apamount' + noun + '" class="form-control" onkeypress="return InsertRowEnter(event)" /></td>' +
                     '</tr >';
-                /*table.appendChild(content);*/
-                /*table.row.add(content).draw(false);*/
+
                 $('#Table_dataFeight tr:last').after(content);
                 $("#txt_title" + noun).focus();
+                
 
-            }
+                $.ajax({
+                    type: 'POST',
+                    data: { Data: "" },
+                    url: 'getDropdownTitle',
+                    dataType: 'json',
+                    success: function (data) {
+                      
+                          var contentTitle = '<option value="0">-- select title --</option>';
+                        for (i = 0; i < data.length; i++) {
+                            
+                            contentTitle += '<option value="' + data[i].accountNo + '">' + data[i].title + '</option>';
+                        }
+
+                      
+                        $("#txt_title" + noun).append(contentTitle);
+                        
+                    }
+                });
+
+              
+              
+           
+                    }
+
+
 
         }
         function getValueDdl() {
@@ -381,4 +492,46 @@
                 }
             })
         }
-    </script>
+
+
+        function BaseTaxTreeChanged(n) {
+
+            var baseTax3 = 0;
+            baseTax3 = $("#Txt_BTax3" + n).val();
+
+            var vat2 = baseTax3 * 0.07;
+            $("#Txt_Vat2" + n).val(parseFloat(vat2).toFixed(2));
+        }
+
+        function ApmountChanged(n) {
+            var vat1 = $("#Txt_Vat1" + n).val(),
+                vat2 = $("#Txt_Vat2" + n).val(),
+                freight = $("#Txt_Freight" + n).val(),
+                original = $("#Txt_Origin" + n).val(),
+                shiping = $("#Txt_Shipping" + n).val();
+            var Apamount = $("#Txt_Apamount" + n).val(),
+                BTax3 = $("#Txt_BTax3" + n).val(),
+                Btax1 = $("#Txt_Btax1" + n).val(),
+                sumtotal_AP = 0;
+
+            var total = parseFloat(vat1) + parseFloat(vat2) + parseFloat(freight) + parseFloat(original) + parseFloat(shiping);
+
+            var total_Ap = total - parseFloat(vat2) - parseFloat(BTax3) - parseFloat(Btax1);
+
+            $("#Txt_Apamount" + n).val(parseFloat(total).toFixed(2));
+            $("#Txt_Advance" + n).val(parseFloat(total_Ap).toFixed(2));
+
+            for (var i = 0; i < n + 1 ; i++) {
+                sumtotal_AP += parseFloat($("#Txt_Apamount" + i).val());
+
+            }
+
+            $("#Ap_Amount").val(parseFloat(sumtotal_AP).toFixed(2));
+        }
+
+
+
+
+
+
+</script>
